Closed
Bug 404140
Opened 18 years ago
Closed 18 years ago
"ASSERTION: comparing iterators over different lists" with -moz-column, overflow:-moz-hidden-unscrollable, wrapping
Categories
(Core :: Layout, defect, P2)
Core
Layout
Tracking
()
VERIFIED
FIXED
People
(Reporter: jruderman, Assigned: roc)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files, 1 obsolete file)
|
207 bytes,
text/html
|
Details | |
|
1.47 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
Loading the testcase triggers:
###!!! ASSERTION: comparing iterators over different lists: 'mListLink == aOther.mListLink', file /Users/jruderman/trunk/mozilla/layout/generic/nsLineBox.h, line 694
Comment 1•18 years ago
|
||
It looks like the issue is that we're in BuildTextRuns iterating the overflow lines of the <div>'s block. So when we compare the current line to startLine, we get an assert: startLine is a non-overflowing line.
Comment 2•18 years ago
|
||
startLine is never an overflow line, right?
Attachment #289161 -
Flags: superreview?(roc)
Attachment #289161 -
Flags: review?(roc)
| Assignee | ||
Comment 3•18 years ago
|
||
I don't want to depend on that since in situations like bug 400057 we might want to change that. Let's make this depend on bug 400057 and fix it after 400057 is resolved.
Depends on: 400057
| Assignee | ||
Updated•18 years ago
|
Attachment #289161 -
Flags: superreview?(roc)
Attachment #289161 -
Flags: superreview-
Attachment #289161 -
Flags: review?(roc)
Attachment #289161 -
Flags: review-
| Reporter | ||
Comment 4•18 years ago
|
||
> Let's make this depend on bug 400057 and fix it after 400057 is resolved.
Bug 400057 was fixed yesterday :)
Updated•18 years ago
|
Flags: blocking1.9?
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → roc
| Assignee | ||
Updated•18 years ago
|
Flags: blocking1.9? → blocking1.9+
Priority: -- → P2
Comment 5•18 years ago
|
||
IExploder fuzzer also hits this assertion, (crash) testcases in bug 421671.
| Assignee | ||
Comment 6•18 years ago
|
||
This is really simple, the assertion fires here because we go into the overflow lines which is a different list even though the block is the same. Instead of worrying about that, just compare the nsLineBox* pointers to see if we've hit the startLine.
Attachment #289161 -
Attachment is obsolete: true
Attachment #309036 -
Flags: superreview?(dbaron)
Attachment #309036 -
Flags: review?(dbaron)
| Assignee | ||
Updated•18 years ago
|
Whiteboard: [needs review]
Updated•18 years ago
|
Attachment #309036 -
Attachment is patch: true
Attachment #309036 -
Attachment mime type: application/text → text/plain
Comment on attachment 309036 [details] [diff] [review]
fix
r+sr=dbaron
Attachment #309036 -
Flags: superreview?(dbaron)
Attachment #309036 -
Flags: superreview+
Attachment #309036 -
Flags: review?(dbaron)
Attachment #309036 -
Flags: review+
| Assignee | ||
Updated•18 years ago
|
Whiteboard: [needs review] → [needs landing]
| Assignee | ||
Comment 8•18 years ago
|
||
Checked in
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [needs landing]
Comment 9•18 years ago
|
||
verified fixed using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008050614 Minefield/3.0pre - no assertion on testcase
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•