Bug 404140. Avoid assertions about comparing line iterators from different lists by comparing nsLineBox* pointers. r+sr=dbaron